--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -22,19 +22,31 @@ jobs:
       - name: Verificar archivos del directorio
         run: ls -la
       
-      # Usar Snyk Code para analizar el código fuente (no dependencias)
+      # Analizar código y ENVIAR resultados a Snyk
       - name: Run Snyk Code to check for vulnerabilities
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        run: snyk code test --severity-threshold=high
+        run: snyk code test --sarif-file-output=snyk-code.sarif || true
+      
+      # IMPORTANTE: Monitor para enviar a Snyk Dashboard
+      - name: Upload results to Snyk
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        run: snyk monitor --project-name=dvwa-activity
         continue-on-error: true
       
-      # Opcional: Analizar contenedores Docker si los usas
+      # Subir resultados a GitHub Security
+      - name: Upload Snyk results to GitHub Code Scanning
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: snyk-code.sarif
+        if: always()
+      
       - name: Run Snyk to check Docker
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         run: |
           if [ -f "Dockerfile" ]; then
-            snyk container test $(docker build -q .)
+            snyk container test $(docker build -q .) || true
           fi
         continue-on-error: true
