--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -22,31 +22,26 @@ jobs:
       - name: Verificar archivos del directorio
         run: ls -la
       
-      # Analizar código y ENVIAR resultados a Snyk
+      # Usar Snyk Code para analizar el código fuente (no dependencias)
       - name: Run Snyk Code to check for vulnerabilities
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        run: snyk code test --sarif-file-output=snyk-code.sarif || true
-      
-      # IMPORTANTE: Monitor para enviar a Snyk Dashboard
-      - name: Upload results to Snyk
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        run: snyk monitor --project-name=dvwa-activity
+        run: snyk code test --severity-threshold=high
         continue-on-error: true
       
-      # Subir resultados a GitHub Security
-      - name: Upload Snyk results to GitHub Code Scanning
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: snyk-code.sarif
-        if: always()
+      # Monitor project in Snyk Dashboard
+      - name: Monitor project in Snyk Dashboard
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        run: snyk monitor
+        continue-on-error: true
       
+      # Opcional: Analizar contenedores Docker si los usas
       - name: Run Snyk to check Docker
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         run: |
           if [ -f "Dockerfile" ]; then
-            snyk container test $(docker build -q .) || true
+            snyk container test $(docker build -q .)
           fi
         continue-on-error: true
